Update grad.ipynb to swap category order and enhance prediction output format

--- a/ch2/grad.ipynb
+++ b/ch2/grad.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,18 +10,24 @@
     "import gradio as gr\n",
     "\n",
     "\n",
-    "categories = ['cat', 'dog']\n",
+    "categories = ['dog', 'cat']  # Swapped order\n",
     "learn = load_learner('model.pkl')\n",
     "\n",
     "def is_cat(img):\n",
-    "    pred,idx,probs = learn.predict(img)\n",
-    "    return {'prediction': categories[idx], 'confidence': probs[idx].item()}\n",
+    "    pred, idx, probs = learn.predict(img)\n",
+    "    # Now idx=0 means dog (uppercase filename) and idx=1 means cat (lowercase filename)\n",
+    "    return {categories[i]: float(probs[i]) for i in range(len(categories))}\n",
+    "    # Or alternatively, more explicit version:\n",
+    "    # return {\n",
+    "    #     'cat': float(probs[0]) if idx == 0 else float(probs[1]),\n",
+    "    #     'dog': float(probs[1]) if idx == 0 else float(probs[0])\n",
+    "    # }\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -64,16 +70,67 @@
     {
      "data": {
       "text/plain": [
-       "{'prediction': 'dog', 'confidence': 1.0}"
+       "{'dog': 0.9999961853027344, 'cat': 3.7563402202067664e-06}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "is_cat(\"cat.jpg\")"
+    "is_cat(\"dog.jpg\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7862\n",
+      "\n",
+      "To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7862/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "image = gr.components.Image()\n",
+    "label = gr.components.Label()\n",
+    "examples = [['dog.jpg'], ['cat.jpg']]\n",
+    "\n",
+    "interface = gr.Interface(\n",
+    "    fn=is_cat,\n",
+    "    inputs=image,\n",
+    "    outputs=label,\n",
+    "    examples=examples,\n",
+    "    title=\"Cat vs Dog Classifier\"\n",
+    ")\n",
+    "\n",
+    "interface.launch()\n"
    ]
   },
   {
